testsuite/tests/typecheck/should_fail/T12178a.stderr

T12178a.hs:7:12: error:
    The INLINE pragma for ‘C’ lacks an accompanying binding
    Suggested fix:
      Move the INLINE pragma to the declaration site of ‘C’.
